@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <includes>
+	<variable name="DialogMusicInfoThumbBackVar">
+		<value condition="!String.IsEmpty(Window(Home).Property(SkinHelper.ListItem.Art.ThumbBack)) + Container.Content(albums)">$LOCALIZE[40169]</value>
+		<value>$LOCALIZE[40061]</value>
+	</variable>
 	<variable name="AlbumsCount">
 		<value condition="Integer.IsLessOrEqual(Window(Home).Property(SkinHelper.ListItem.AlbumCount),1)">$INFO[Window(Home).Property(SkinHelper.ListItem.AlbumCount),, $LOCALIZE[36918]]</value>
 		<value>$INFO[Window(Home).Property(SkinHelper.ListItem.AlbumCount),, $LOCALIZE[36919]]</value>
